[package]
name = "google-chat-types"
version = "0.1.4"
edition = "2021"
authors = ["sinyo-matu <sinyo_matu@icloud.com>"]
license = "MIT"
description = "types collection of google chat response"
categories = ["api-bindings","development-tools"]
keywords = ["googlechat","google","chat"]
repository = "https://github.com/sinyo-matu/google-chat-types"
readme = "README.md"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_builder = "0.11"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.31"

[dev-dependencies]
serde_json = "1.0.81"
